--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,7 @@
 			</footer>
     	<script type="text/javascript" src="assets/js/jquery-3.2.1.js"></script>
 			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+			<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 			<script type="text/javascript" src="assets/js/angular.js"></script>
 			<script type="text/javascript" src="assets/js/angular-route.js"></script>
     	<script type="text/javascript" src="assets/js/app.js"></script>
